--- a/practice/2020/samples/ex_03_cv/package.xml
+++ b/practice/2020/samples/ex_03_cv/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>03cv</name>
+  <name>ex_03_cv</name>
   <version>0.0.0</version>
   <description>The 03cv package</description>
 
