--- a/practice/2020/samples/ex_01_turtlesim/CMakeLists.txt
+++ b/practice/2020/samples/ex_01_turtlesim/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(01turtlesim)
+project(ex_01_turtlesim)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
